[ song texts ] song texts will be added for a couple of songs

--- a/src/ethikderfuesse.tex
+++ b/src/ethikderfuesse.tex
@@ -11,7 +11,157 @@
 
     \label{ethikderfuesse}
 
-    \beginverse
-        Example verse ...
+    \beginverse\memorize[verse]
+        Ein Troll der stand am Wegesrand
+        Mit einer Keule in der Hand
+        Er sagte zu mir: "Komm in meinen Bauch!"
+        Das wollte ich nicht und das weiß er jetzt auch.
     \endverse
+
+    \beginchorus\memorize[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Ich lag dereinst in einem Bett
+        Die Frau war nicht meine, doch sie war nett
+        Ihr Mann kam nach Haus und er wollt ein Duell
+        Er war zwei Meter groß, hatte Klauen und Fell.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Ich kam einmal wieder zu diesem Haus
+        Die Frau, die schaute zum Fenster heraus
+        Sie gab mir ein Bündel, aus dem kam ein Ton
+        Sie lachte mich an und sprach: "Das ist dein Sohn."
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Darauf kehrte ich in ein Gasthaus ein
+        Ich aß zwei Dutzend Wachteln, trank drei Liter Wein
+        Da wollte der Wirt ein Goldstück seh'n
+        Das hatte ich nicht, darum mußt ich schnell geh'n.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Doch die Stadtwache fand mich, brachte mich vor Gericht
+        Der Richter der sprach: "Ich zweifle nicht
+        Das den Tod Du verdienst, so wahr Richter ich bin!
+        Wachen ergreift ihn! Ja, wo ist er denn hin?!"
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Ich spürte einst vieler Untoter Hauch,
+        Einen Inquisitor, den gab es dort auch,
+        Ich wurde mit beidem bitterfeind,
+        doch fehlt ein Grund, daß eine Frau mich beweint.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Im tiefsten Winter, es war bitterkalt
+        Da traf ich drei hungrige Wölfe im Wald
+        Ich lachte ihnen mutig ins Angesicht:
+        "Ich bin stärker als ihr!" Doch sie glaubten mir nicht
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Ich feierte mal, so gut es ging
+        Auf einer Feste mit Verteidigungsring
+        Da kamen tausend Orks, setzten sich drumherum
+        Ja bliebe ich dort, dann wär ich schön dumm.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Ich fand einmal einen wertvollen Ring,
+        An dem sein Besitzer mit Leidenschaft hing
+        Er versprach mir seiner Tochter Hand
+        Sie war dürr und häßlich und fahl wie die Wand
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Es klopfte dereinst an meinem Tor
+        Ich schaute heraus und der Tod stand davor
+        Er sagte zu mir: "KOMM, LASS UNS GEHEN!"
+        Wir ha'm uns seitdem nicht mehr wiedergesehn.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Drum rat ich Euch, steh'n die Dinge mal schlecht
+        Oder klebt an Euren Schuhen das Pech
+        Dann schwing sie geschwind, so schwer es auch fällt
+        Nur wer heute noch lebt, der ist morgen ein Held.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Es ist manchmal gar nicht so schlecht schnell zu sein.
+        Manchmal gar nicht so dumm.
+        Kann dein Schwert Dich nicht retten,
+        na dann möcht ich doch wetten, dann gäbst Du sicher was drum.
+    \endchorus
 \endsong
