--- a/src/gossenabitur.tex
+++ b/src/gossenabitur.tex
@@ -11,7 +11,92 @@
 
     \label{gossenabitur}
 
-    \beginverse
-        Example verse ...
+    \beginverse\memorize[verse]
+        Mudder hat mir mal gesagt, ich soll was bess'res werden
+        Nicht so‘n Gossenlümmel ohne Geld
+        Würde ich nichts lernen, würde ich mich nur gefährden
+        Und hätte meine Armut vorbestellt
+        Ich solle fleißig beten, zum Schulmeister geh'n
+        Und ein braver Bänkedrücker sein
+        Ich soll‘ in Ärsche kriechen und um Vergebung fle'n
+        Fäng‘ ich mir vom Leben eine ein
+    \endverse
+
+    \beginchorus\memorize[chorus]
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+    \endchorus
+
+    \beginverse\replay[verse]
+        Vadder hat mich stets ermahnt, ‘ne Arbeit zu ergreifen
+        Als emsig fleiß'ger Medizinstudent
+        Dazu würd‘ ich mich eignen, selbst mir Pillen zu verschreiben
+        Ich wär‘ zu allen Zeiten sehr solvent
+        Kein Weib täte sich zieren beim Massagen rezeptieren
+        Sie würden gern zum Onkel Doktor geh'n
+        Doch will ich mich nicht länger in Fantasien verlieren
+        Hier in der Gosse ist es auch ganz schön
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+    \endchorus
+
+    \beginverse\replay[verse]
+        Und damit keiner sagen kann, wir ham den Dreh nicht raus
+        Stell'n wir uns ein Armutszeugnis aus:
+        Im „Schnorren" bin ich ausreichend, im „Läuseknacken" schlecht
+        Begabt bin ich in "Straßenhehlerei"
+        Ungenügend hab ich nur in "Straf- und Steuerrecht"
+        Dafür in „Kneipenschlägerei" ‘ne Zwei
+        In „Stammtischpolitik" bin ich der Jahrgangsbeste wohl
+        Hab eine Drei in „Die Polente schmieren"
+        Außerdem besitze ich das Einser-Monopol
+        In „Heimlich an den Tresen urinieren"
+        „Kneipenkunde" kann ich gut, ich kann mich nicht beschwer'n
+        Den Leistungskurs in „Saufen" hab ich gern
+        Da habe ich ne glatte Zwei im „Bierkrüge ausleer'n"
+        In „Branntweinschlucken" eine Eins mit Stern
+        Mein Lieblingsfach ist „Pöbeln" und „Zecheprellerei"
+        Und „Gossenpoesie am Pintentresen"
+        Und in „Liebeskunde" – ich sag das mal so frei:
+        Da wär‘ ich gern befriedigend gewesen
+        „Arbeits- und Sozialverhalten", ja was soll ich sagen
+        Ja brauch man das denn wirklich hier im Leben?
+        In unser'n Armutszeugnis steht, sollt jemand danach fragen
+        „Sie haben sich stets Mühe gegeben!"
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+    \endchorus
+
+    \beginchorus\replay[chorus]
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+    \endchorus
+
+    \beginchorus\replay[chorus]
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+    \endchorus
+
+    \beginchorus\replay[chorus]
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
+        Da schraub ich mir doch lieber den Schnaps in die Figur
+        Und lerne für mein Gossenabitur
     \endverse
 \endsong
