--- a/src/hasso.tex
+++ b/src/hasso.tex
@@ -11,7 +11,52 @@
 
     \textbf{Note: this song is not yet finished!}
 
-    \beginverse
-        Example verse ...
+    \beginverse*
+        Hasso - Hasso - Hasso - Hasso
+    \endverse
+
+    \beginchorus\memorize[chorus]
+        Mein Hund ist schwul, die dumme Sau
+        Er macht nicht kläff, er macht nur wau
+    \endchorus
+
+    \beginverse\memorize[verse]
+        Er isst und trinkt, er wäscht und schminkt
+        Sich nur aus Puderdöschen,
+        Trägt rosa Spitzenhöschen.
+        Er schmust und leckt und macht so Sachen
+        Die echt nur schwule Hunde machen
+        Er pinkelt niemals auf die Strasse
+        Ich roch noch die des Hundes Gase
+        Ich sah noch die des Hundes Stuhl
+        Es tut mir leid - mein Hund ist schwul
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Mein Hund ist schwul, die dumme Sau
+        Er macht nicht kläff, er macht nur wau
+    \endchorus
+
+    \beginverse\replay[verse]
+        Er ist als Pudel ein Ästhet
+        Dem öfter mal die Nudel steht
+        Was meistens nur im Rudel geht
+        Etwas and'res als ein Rüde
+        Kommt bei ihm nicht vor die Tüte
+        Manchmal lädt er seinen Freund ein
+        Am liebsten würden sie zu neunt sein
+        Die Hütte ist ein Sündenpfuhl
+        Es tut mir leid - mein Hund ist schwul
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Mein Hund ist schwul, die dumme Sau
+        Er macht nicht kläff, er macht nur wau
+    \endchorus
+
+    \beginverse\replay[verse]
+        An schlechten Tagen dacht' ich schon
+        Am öffentliche Kastration
+        But I can't get no satisfaction.
     \endverse
 \endsong
