--- a/src/prinzessin.tex
+++ b/src/prinzessin.tex
@@ -11,7 +11,50 @@
 
     \textbf{Note: this song is not yet finished!}
 
-    \beginverse
-        Example verse ...
+    \beginverse\memorize[verse]
+        Wo Himmel und Erde einander berühr'n, ein glutroter Kuss.
+        Kannst du's sehn, kannst du's spür'n?
+        Farben verblassen, Ruhe kehrt ein.
+        In dunklem Gewand zieht die Nacht herein.
     \endverse
+
+    \beginchorus\memorize[chorus]
+        Prinzessin schließe die Augen!
+        Schlafe nur seelenruhig ein!
+        Prinzessin, du kannst mir glauben, ich leuchte dir,
+        fange Sterne dafür.
+        Schlafe nur ein hier bei mir.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Schon funkelt es hell am Firmament.
+        Hat je wer für dich all die Sterne gezählt?
+        Ein Traum wird dich holen, dich auserwähl'n.
+        Flieg mit ihm dahin, lass dir Märchen erzähl'n!
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Prinzessin schließe die Augen!
+        Schlafe nur seelenruhig ein!
+        Prinzessin, du kannst mir glauben, ich leuchte dir,
+        fange Sterne dafür.
+        Schlafe nur ein hier bei mir.
+    \endchorus
+
+    \beginchorus\replay[chorus]
+        Prinzessin schließe die Augen!
+        Schlafe nur seelenruhig ein!
+        Und kann ich einmal nicht bei dir sein,
+        so schleich ich mich in deinen Traum hinein.
+        Schlafe nur seelenruhig ein!
+    \endchorus
+
+    \beginchorus\replay[chorus]
+        Prinzessin schließe die Augen!
+        Schlafe nur seelenruhig ein!
+        Prinzessin, du kannst mir glauben, ich leuchte dir,
+        fange Sterne dafür.
+        Schlafe nur ein hier bei mir.
+        Schlafe nur ein hier bei mir. 
+    \endchorus
 \endsong
