--- a/src/saufmichschoen.tex
+++ b/src/saufmichschoen.tex
@@ -11,7 +11,165 @@
 
     \label{saufmichschoen}
 
-    \beginverse
-        Example verse ...
+    \beginverse\memorize[verse]
+        Ich sah deine Schönheit
+        im Schanksaal aufblitzen,
+        du warst ganz allein
+        und du summtest ein Lied.
+        Ja du saßt einfach da
+        und ich hatte ein' sitzten
+        und wusste nicht wie mir geschieht.
+        Denn du warst wie der Zapfhahn,
+        den jemand im Flug
+        in das Fass meiner sprudelnden Sehnsucht einschlug,
+        wie der Qualm, der den Knaster erst liebenswert macht,
+        wie die rote Laterne
+        im Dunkel der Nacht.
+    \endverse
+
+    \beginverse*\memorize[bridge]
+        Und ich ging zu dir rüber und sprach:
+        „Mädchen denk über uns beide nach.
+
+        Und dazu:
+        komm schon mein Stückchen,
+        los nimm noch ein Schlückchen,
+        ein Tröpfchen, ein Gläschen,
+        ein Krüglein, mein Häßchen.
+        Hau's dir in den Hals!
+        Ja schütt's dir in den Rachen!
+        Den Rest wird mein guter Freund Alkohol machen.
+        Dann kannst du mich herrlich verwöhn'.
+    \endverse
+
+    \beginchorus\memorize[chorus]
+        Komm schon, mein Liebchen,
+        sauf mich schön!
+        Komm schon, mein Liebchen,
+        sauf mich schön!"
+
+    \beginverse\replay[verse]
+        So setzt' ich mich reichlich beladen zu dir
+        und machte dir feuchte Geschenke.
+        Und du schlucktest den Branntwein und billiges Bier
+        wie der durstige Gaul an der Tränke.
+        Und ich dachte mir schon
+        was ein Weib, was ein Zug,
+        bald schon ist sie besoffen,
+        bald hat sie genug.
+        Bald schon werd' ich ihr Strahlemann sein.
+        Ja und dann
+        bin ich nicht mehr allein.
+    \endverse
+
+    \beginverse*\replay[bridge]
+        Und ich beugte mich rüber und sprach:
+        „Mädchen denk über uns beide nach.
+
+        Und dazu:
+        komm schon mein Täubchen,
+        kipp's dir unters Häubchen,
+        ein Tröpfchen, ein Gläschen,
+        ein Krüglein, mein Häßchen.
+        Hau's dir in den Hals!
+        Ja schütt's dir in den Rachen!
+        Den Rest wird mein guter Freund Alkohol machen.
+        Du wirst dich schon an mich gewöhn'
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Komm schon, mein Liebchen,
+        sauf mich schön!
+        Komm schon, mein Liebchen,
+        sauf mich schön!"
+    \endchorus
+
+        Jaa sauf du Schlampe!
+
+    \beginverse*\replay[bridge]
+        Ja und dann war sie reif
+        und ich lief voll Behagen
+        vor die Tür
+        und ich steckte mir Blumen zum Kragen,
+        nahm den Hut vor die Brust
+        und strich mir sogrsam eitel,
+        mein Haupthaar mir Stiefelfett
+        kunstvoll zum Scheitel.
+        Ja so stürzt' ich hinein,
+        fiel vor ihr auf die Knie
+        und ich macht' ihr ein Antrag
+        und all diesen Kram
+        und auch sie fiel ja während
+        sie lüstern aufschrie,
+        nur nicht mir, nein dem Wirt in den Arm...
+    \endverse
+
+    \beginverse*\replay[bridge]
+        Und der reichte die willige Schnapsdrossel heiter
+        an all seine blutjungen Schankknechte weiter
+        danach zog sie freudig
+        zu deren entzücken
+        zu ner Bande von Spielleuten
+        sie zu beglücken.
+        Ner Mannschaft Piraten
+        hing sie bald am Ruder
+        und all den Halunken,
+        dies wildgeile Luder!
+        Ja sie tat keine Zeit
+        und kein Mannsbild vergeuden
+        und teile mit jedem die fleischlichen Freuden,
+        in schier unersättlicher Gier
+        gab sie sich hin,
+        nur nicht mir!
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Komm schon, mein Liebchen,
+        sauf mich schön!
+    \endchorus
+
+    \beginverse*\replay[bridge]
+        Doch sie drehte nur weiter
+        die brünftigen Runden
+        und mir wich die Trunkenheit
+        aus meinem Kopf.
+        Hab ich nüchtern gewartet
+        und nach ein paar Stunden
+        packte mich die Erkenntnis am Schopf!
+        Denn ihr Antlitz war nüchtern betrachtet
+        ein Jammer
+        und ihr Scham
+        der Scham einer Folterkammer
+        und ihr Leib war auch
+        nicht grade göttlich gelung'
+        und ihr Charisma
+        das einer Hinrichtung.
+        Doch dann kam sie herüber und sprach:
+        "Hotze denk über uns beiden nach.
+    \beginchorus\replay[chorus]
+
+    \beginverse*\replay[bridge]
+        Komm schon, mein Böckchen,
+        greif mir unter's Röckchen
+        und trink noch ne Buddel
+        mein bärtiger Knuddel.
+        Schütt's dir in den Hals,
+        ja hau's dir in den Rachen,
+        den Rest wird dein guter Freund
+        Alkohol machen!
+        Dann werden wir herrlich obszön!
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Komm schon, mein Liebchen,
+        sauf mich schön!
+        Komm schon, mein Liebchen,
+        sauf mich schön!"
+    \endchorus
+
+    \beginverse\replay[verse]
+        Und ich dacht' mir:
+        „Naja, grausam ist sie, die Welt."
+        Und dann hab ich 'ne Pulle bestellt.
     \endverse
 \endsong
