--- a/src/summerwine.tex
+++ b/src/summerwine.tex
@@ -11,7 +11,56 @@
 
     \label{summerwine}
 
-    \beginverse
-        Example verse ...
+    \beginverse*
+        Strawberries Cherries And An Angel's Kiss In Spring
+        My Summer Wine Is Really Made From All These Things
     \endverse
+
+    \beginverse\memorize[verse]
+        I Walked In Town On Silver Spurs That Jingled To
+        A Song That I Had Only Sang To Just A Few
+        She Saw My Silver Spurs And Said Let's Pass Some Time
+        And I Will Give To You Summer Wine
+        Ohh-Oh-Oh Summer Wine
+    \endverse
+
+    \beginchorus\memorize[chorus]
+        Strawberries Cherries And An Angel's Kiss In Spring
+        My Summer Wine Is Really Made From All These Things
+        Take Off Your Silver Spurs And Help Me Pass The Time
+        And I Will Give To You Summer Wine
+        Ohh-Oh-Oh Summer Wine
+    \endchorus
+
+    \beginverse\replay[verse]
+        My Eyes Grew Heavy And My Lips They Could Not Speak
+        I Tried To Get Up But I Couldn't Find My Feet
+        She Reassured Me With An Unfamiliar Line
+        And Then She Gave To Me More Summer Wine
+        Ohh-Oh-Oh Summer Wine
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Strawberries Cherries And An Angel's Kiss In Spring
+        My Summer Wine Is Really Made From All These Things
+        Take Off Your Silver Spurs And Help Me Pass The Time
+        And I Will Give To You Summer Wine
+        Ohh-Oh-Oh Summer Wine
+    \endchorus
+
+    \beginverse\replay[verse]
+        When I Woke Up The Sun Was Shining In My Eyes
+        My Silver Spurs Were Gone My Head Felt Twice It's Size
+        She Took My Silver Spurs A Dollar And A Dime
+        And Left Me Cravin' For More Summer Wine
+        Ohh-Oh-Oh Summer Wine
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Strawberries Cherries And An Angel's Kiss In Spring
+        My Summer Wine Is Really Made From All These Things
+        Take Off Your Silver Spurs And Help Me Pass The Time
+        And I Will Give To You Summer Wine
+        Ohh-Oh-Oh Summer Wine
+    \endchorus
 \endsong
