--- a/src/superknasterbart.tex
+++ b/src/superknasterbart.tex
@@ -11,7 +11,107 @@
 
     \label{superknasterbart}
 
-    \beginverse
-        Example verse ...
+    \beginverse\memorize[chorus]
+        Man sagt es gäbe keine Helden mehr
+        Und wahre Superkräfte hat man lange nicht gesehen
+        Ich sag wer das behauptet irrt sich sehr
+        Und hat mich wohl noch nie aus der Taverne fliegen sehen
+        \brk
+        Man sagt hier wär's gefährlich dann und wann
+        Überall hier in der Gosse lauern schäbige Verbrecher
+        Darum leg' ich die Heldenmaske an
+        Und wer‘ zum überedlen Rächer mit dem Becher
     \endverse
+
+    \beginverse\replay[verse]
+        Hast du zwei schöne Mädels grad‘ zur Wahl
+        Und kannst dich nicht für eine nur entscheiden
+        Helfe ich dir tapfer aus der Qual
+        Und beglück‘ für dich ganz einfach gleich die beiden
+        \brk
+        Und wir dir all dein Bier mal wieder viel zu schal
+        Bin ich mütterlich bereit zur Heldentat
+        Ich trink es aus und rette dich gern wiedermal
+        Denn schales Bier ist wie wir wissen Hochverrat
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Knasterbart – Die Zeitungsjungen melden
+        Knasterbart – Endlich gibt's wieder Superhelden
+        Knasterbart – Schluss mit der Scheißmoral
+        Denn am Himmel scheint das Knasterbart-Signal
+    \endchorus
+
+    \beginverse*\memorize[bridge]
+        Sind es Säcke voller Schlachtabfälle?: NEIN!
+        Sind es ein gesitig degenerierte Orang-Utans?: NEIN!
+        Es ist SUPERKNASTERBART!
+    \endverse
+
+    \beginverse\replay[verse]
+        Ja denn alles was uns fehlte hier im Kiez
+        War 'n bisschen mehr vom Heldenideal
+        War 'n bisschen selbstgerechte Selbstjustiz
+        Und ‘n bisschen bess're Rauch- und Trinkmoral
+        \brk
+        Darum wird diesem Trott das Handwerk nun gelegt
+        Und der Pöbel kann kaum glauben was geschieht
+        Denn bei Knasterbart wird Heldentum gepflegt
+        Nur Recht und Ordnung sind unser Kryptonit
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Knasterbart – Die Zeitungsjungen melden
+        Knasterbart – Endlich gibt's wieder Superhelden
+        Knasterbart – Schluss mit der Scheißmoral
+        Denn am Himmel scheint das Knasterbart-Signal
+    \endchorus
+
+    \beginverse*\replay[bridge]
+        Ist ein Betriebsausflug der Lepra-Kolonie?: NEIN!
+        Ist es das Beach-Volleyballteam von Frauenknast?: JA!
+        Es ist SUPERKNASTERBART!
+    \endverse
+
+    \beginverse\memorize[interlude1]
+        Häng‘ unverrückbar an dem Tresen dran
+        Kann selbst noch trinken, wenn ich schon am Boden lieg‘
+        Schlucke schneller, als mein Schatten schlucken kann
+        Und aus guter Luft mach‘ ich schlechte Musik
+        Vor ein paar Jahren, da hat mich wohl mal
+        Ne radioaktive Filzlaus gezwickt
+        Und dadurch hab‘ ich jetzt die Leber aus Stahl
+        Und den Röntgen-Tunnelblick
+        Ich hab‘ den braunen Gurt im Kamptrinksport
+        Bin der, der jeden Vollrausch überlebt
+        Spucke manchmal Säurestrahlen in Akkord
+        Ja ich bin der Superhotze, wie er leibt und klebt
+    \endverse
+
+    \beginverse\memorize[interlude2]
+        Ich kann locker saufen ohne Spaß zu haben
+        Geh‘ jedem Sittenwächter tapfer auf'n Sack
+        Verwandel dein Kupper in meins, ohne zu fragen
+        Und erkenn‘ zehn verschiedene Tripper am Geschmack
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Zwo, eins… Risiko!!!
+
+        Knasterbart – Die Zeitungsjungen melden
+        Knasterbart – Endlich gibt's wieder Superhelden
+        Knasterbart – Schluss mit der Scheißmoral
+        Denn am Himmel scheint das Knasterbart-Signal
+    \beginverse\replay[verse]
+
+    \beginchorus\replay[chorus]
+        Knasterbart – Die Fünf-Promille-Liga
+        Knasterbart – Die untersetzten Überflieger
+        Knasterbart – Ihr könnt uns alle mal
+        Denn am Himmel scheint das Knasterbart-Signal
+        Denn am Himmel scheint das Knasterbart-Signal
+        Knasterbart
+        Knasterbart
+        Knasterbart
+    \endchorus
 \endsong
