[ song parts ] new song parts

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -25,6 +25,8 @@
 \newchords{verse}
 \newchords{chorus}
 \newchords{bridge}
+\newchords{interlude1}
+\newchords{interlude2}
 
 \date{\textbf{Erstellt am:} 10. Februar 2014 \\ \textbf{\"{U}berarbeitet am:} \today}
 \clearpage
