[ gods gonna cut you down ] chords will be added

--- a/src/gods_gonna_cut_you_down/LaTeX/gods_gonna_cut_you_down.tex
+++ b/src/gods_gonna_cut_you_down/LaTeX/gods_gonna_cut_you_down.tex
@@ -9,86 +9,87 @@
 
     \label{godsgonnacutyoudown}
 
-    %\begin{center}
-    %    \gtab{E}{022100:023100}
-    %    \gtab{A}{X0222X:001110}
-    %    \gtab{D}{XX0232:000132}
-    %    \gtab{F}{133211:134211}
-    %    \gtab{G}{3:133211:134211}
-    %    \gtab{A7}{30XXXX:200000}
-    %    \gtab{E7}{020100:020100}
-    %\end{center}
+    \begin{center}
+        \gtab{Cm\textsuperscript{1}}{5:01X3XX:010400}
+        \gtab{Cm\textsuperscript{2}}{000000:000000}
+        \gtab{F}{5:111X0X:332000}
+        \gtab{E&}{333XXX:33200}
+        \gtab{B&}{3:X1X3XX:010400}
+    \end{center}
 
-    \beginchorus
-        You can run on for a long time
+    \beginchorus\memorize[chorus]
+        You can r\[Cm\textsuperscript{1}]un on for a long time
+        R\[F]un on for a l\[Cm\textsuperscript{1}]ong time
         Run on for a long time
+        S\[E&]ooner or l\[Cm\textsuperscript{2}]ater God'll \[B&] cut you d\[Cm\textsuperscript{1}]own
+        S\[E&]ooner or l\[Cm\textsuperscript{2}]ater God'll \[B&] cut you d\[Cm\textsuperscript{1}]own
+    \endchorus
+
+    \beginverse\memorize[verse]
+        Go t\[Cm\textsuperscript{1}]ell that long tongue liar
+        Go and tell that midnight rider
+        Tell the rambler, the gambler, the back biter
+        T\[E&]ell 'em that G\[Cm\textsuperscript{2}]od's gonna \[B&] cut 'em d\[Cm\textsuperscript{1}]own
+        T\[E&]ell 'em that G\[Cm\textsuperscript{2}]od's gonna \[B&] cut 'em d\[Cm\textsuperscript{1}]own
+    \endverse
+
+    \beginchorus\replay[chorus]
+        You can r^un on for a long time
+        R^un on for a l^ong time
         Run on for a long time
-        Sooner or later God'll cut you down
-        Sooner or later God'll cut you down
+        S^ooner or l^ater God'll ^ cut you d^own
+        S^ooner or l^ater God'll ^ cut you d^own
     \endchorus
 
     \beginverse*
-        Go tell that long tongue liar
-        Go and tell that midnight rider
-        Tell the rambler, the gambler, the back biter
-        Tell 'em that God's gonna cut 'em down
-        Tell 'em that God's gonna cut 'em down
-    \endverse
-
-    \beginchorus
-        You can run on for a long time
-        Run on for a long time
-        Run on for a long time
-        Sooner or later God'll cut you down
-        Sooner or later God'll cut you down
-    \endchorus
-
-    \beginverse
-        Well my goodness gracious let me tell you the news
+        Well my g\[Cm\textsuperscript{1}]oodness gracious let me tell you the news
         My head's been wet with the midnight dew
-        I've been down on bended knee talkin' to the man from Galilee
-        He spoke to me in the voice so sweet
+        I've been down on bended knee talkin' to the man from G\[B&]alil\[Cm\textsuperscript{1}]ee
+        He sp\[Cm\textsuperscript{1}]oke to me in the voice so sweet
         I thought I heard the shuffle of the angel's feet
         He called my name and my heart stood still
-        When he said, "John go do My will!"
+        When he said, ``John go d\[B&]o My w\[Cm\textsuperscript{1}]ill!''
     \endverse
 
-    \beginverse*
-        Go tell that long tongue liar
+    \beginverse\replay[verse]
+        Go t^ell that long tongue liar
         Go and tell that midnight rider
         Tell the rambler, the gambler, the back biter
-        Tell 'em that God's gonna cut 'em down
-        Tell 'em that God's gonna cut 'em down
+        T^ell 'em that G^od's gonna ^ cut 'em d^own
+        T^ell 'em that G^od's gonna ^ cut 'em d^own
     \endverse
 
-    \beginchorus
-        You can run on for a long time
+    \beginchorus\replay[chorus]
+        You can r^un on for a long time
+        R^un on for a l^ong time
         Run on for a long time
-        Run on for a long time
-        Sooner or later God'll cut you down
-        Sooner or later God'll cut you down
+        S^ooner or l^ater God'll ^ cut you d^own
+        S^ooner or l^ater God'll ^ cut you d^own
     \endchorus
 
-    \beginverse
+    \beginverse*
         Well you may throw your rock and hide your hand
         Workin' in the dark against your fellow man
         But as sure as God made black and white
         What's down in the dark will be brought to the light
     \endverse
 
-    \beginchorus
-        You can run on for a long time
+    \beginchorus\replay[chorus]
+        You can r^un on for a long time
+        R^un on for a l^ong time
         Run on for a long time
-        Run on for a long time
-        Sooner or later God'll cut you down
+        S^ooner or l^ater God'll ^ cut you d^own
     \endchorus
 
-    \beginchorus
-        You can run on for a long time
+    \beginchorus\replay[chorus]
+        You can r^un on for a long time
+        R^un on for a l^ong time
         Run on for a long time
-        Run on for a long time
-        Tell 'em that God's gonna cut you down
-        Tell 'em that God's gonna cut you down
-        Tell 'em that God's gonna cut you down
+        T^ell 'em that G^od's gonna ^ cut you d^own
+        T^ell 'em that G^od's gonna ^ cut you d^own
+        T\[E&]ell 'em that G\[Cm\textsuperscript{2}]od's gonna \[B&] cut you d\[Cm\textsuperscript{1}]own
     \endchorus
 \endsong
+
+%\sclearpage
+%\includepdf[pages=-,offset=-45 -50,width=\textwidth]{../src/gods_gonna_cut_you_down/lilypond/PDF/gods_gonna_cut_you_down.pdf}
