[ mein kleiner gruener goblin ] umlauts + entry in main tex file

--- a/src/mein_kleiner_gruener_goblin/LaTeX/mein_kleiner_gruener_goblin.tex
+++ b/src/mein_kleiner_gruener_goblin/LaTeX/mein_kleiner_gruener_goblin.tex
@@ -1,13 +1,13 @@
 \stepcounter{subsection}
 
-\beginsong{Mein kleiner gruener Goblin}[%
+\beginsong{Mein kleiner gr\"{u}ner Goblin}[%
     by={Comedian Harmonists},
     cr={},
     li={},
     index={mein_kleiner_gruener_goblin}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Mein kleiner gruener Goblin} --- Comedian Harmonists}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Mein kleiner gr\"{u}ner Goblin} --- Comedian Harmonists}
 
     \label{mein_kleiner_gruener_goblin}
 
