--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -126,6 +126,7 @@
             \input{../src/hes_a_pirate/LaTeX/hes_a_pirate}                                                                      \sclearpage
             %\input{../src/kaperfahrt/LaTeX/kaperfahrt}                                                                          \sclearpage
             %\input{../src/kickapoo/LaTeX/kickapoo}                                                                              \sclearpage
+            %\input{../src/mein_kleiner_gruener_goblin/LaTeX/mein_kleiner_gruener_goblin}                                        \sclearpage
             %\input{../src/pippi_langstrumpf/LaTeX/pippi_langstrumpf}                                                            \sclearpage
             %\input{../src/sauf_mich_schoen/LaTeX/sauf_mich_schoen}                                                              \sclearpage
             %\input{../src/seehilfe/LaTeX/seehilfe}                                                                              \sclearpage
