[ mein kleiner gruener goblin ] text added
choruses and verses will be added, no chords though

--- a/src/mein_kleiner_gruener_goblin/LaTeX/mein_kleiner_gruener_goblin.tex
+++ b/src/mein_kleiner_gruener_goblin/LaTeX/mein_kleiner_gruener_goblin.tex
@@ -11,7 +11,46 @@
 
     \label{mein_kleiner_gruener_goblin}
 
-    \beginverse
-        Example verse ...
+    \beginverse\memorize[verse]
+        Mein kleiner grüner Goblin sitzt draußen vor dem Zelt,
+        Hollari, hollara, hollaro.
+        Was brauch ich einen Riesen, was brauch ich einen Held,
+        Hollari, hollara, hollaro.
     \endverse
+
+    \beginchorus\memorize[chorus]
+        Und wenn ein Bösewicht, mal in mein Zelt einbricht,
+        dann kommt der kleine Goblin und er spricht, spricht, spricht.
+        Mein kleiner grüner Goblin sitzt draußen vor dem Zelt.
+        Hollari, hollara, hollaro.
+    \endchorus
+
+
+    \beginverse\replay[verse]
+        Mein kleiner grüner Goblin sitzt draußen am Balkon,
+        Hollari, hollara, hollaro.
+        Was brauch ich Assassinen, was brauch ich 'nen Dämon,
+        Hollari, hollara, hollaro.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Und plant ein Bösewicht, nen Schlag in mein Gesicht,
+        dann hol ich meinen Goblin und er tut es nicht
+        Mein kleiner grüner Goblin sitzt draußen am Balkon.
+        Hollari, hollara, hollaro.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Mein kleiner grüner Goblin sitzt draußen am Balkon,
+        Hollari, hollara, hollaro.
+        Was brauch ich Assassinen, was brauch ich 'nen Dämon,
+        Hollari, hollara, hollaro.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Und wenn ein Bösewicht, mal meinen Goblin frißt,
+        dann zuck ich mit den Schultern und sag :"Warum nicht?"
+        Mein kleiner grüner Goblin war sowieso saudumm.
+        Hollari, hollara, hollaro.
+    \endchorus
 \endsong
