[ new song ] NSCs luegen nicht

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -127,6 +127,7 @@
             %\input{../src/kaperfahrt/LaTeX/kaperfahrt}                                                                          \sclearpage
             %\input{../src/kickapoo/LaTeX/kickapoo}                                                                              \sclearpage
             %\input{../src/mein_kleiner_gruener_goblin/LaTeX/mein_kleiner_gruener_goblin}                                        \sclearpage
+            %\input{../src/nscs_luegen_nicht/LaTeX/nscs_luegen_nicht}                                                            \sclearpage
             %\input{../src/pippi_langstrumpf/LaTeX/pippi_langstrumpf}                                                            \sclearpage
             %\input{../src/sauf_mich_schoen/LaTeX/sauf_mich_schoen}                                                              \sclearpage
             %\input{../src/seehilfe/LaTeX/seehilfe}                                                                              \sclearpage
