[ new song ] viking men

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -135,7 +135,8 @@
             %\input{../src/super_knasterbart/LaTeX/super_knasterbart}                                                            \sclearpage
             %\input{../src/trigardon/LaTeX/trigardon}                                                                            \sclearpage
             \input{../src/the_enchanter/LaTeX/the_enchanter}                                                                    \sclearpage
-            %\input{../src/untot_auf_urlaub/LaTeX/untot_auf_urlaub}
+            %\input{../src/untot_auf_urlaub/LaTeX/untot_auf_urlaub}                                                              \sclearpage
+            %\input{../src/viking_men/LaTeX/viking_men}
         \end{songs}{}
 
     %\clearpage
