[ viking men ] syntax error will be purged

--- a/src/viking_men/LaTeX/viking_men.tex
+++ b/src/viking_men/LaTeX/viking_men.tex
@@ -15,7 +15,7 @@
         Dashing thru the town, Our firebrands burning bright,
         Striking foemen down, Setting things alight,
         Swords on axes ring, Making spirits bright,
-        What fun it is to laugh and sing, A _slaying_ song tonight!
+        What fun it is to laugh and sing, A \textbf{slaying} song tonight!
     \endverse
 
     \beginchorus\memorize[chorus]
