[ gods gonna cut you down ] drop c tuning
information added.

the chord names are false though. in fact, they are correct due to the
absolute chord they play, but the fret numbers in relation to the names
is messed up. need to be transposed ...

--- a/src/gods_gonna_cut_you_down/LaTeX/gods_gonna_cut_you_down.tex
+++ b/src/gods_gonna_cut_you_down/LaTeX/gods_gonna_cut_you_down.tex
@@ -17,6 +17,8 @@
         \gtab{B&}{3:X1X3XX:010400}
     \end{center}
 
+    \textnote{Drop-C Tuning (CGCFAD)}
+
     \beginchorus\memorize[chorus]
         You can r\[Cm\textsuperscript{1}]un on for a long time
         R\[F]un on for a l\[Cm\textsuperscript{1}]ong time
