[ scotland the brave ] added to chordbook, but not enabled

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -96,6 +96,7 @@
             %\input{../src/nebel_ueber_den_auen/LaTeX/nebel_ueber_den_auen}                                                      \sclearpage
             %\input{../src/oh_adelsmann/LaTeX/oh_adelsmann}                                                                      \sclearpage
             %\input{../src/prinzessin/LaTeX/prinzessin}                                                                          \sclearpage
+            %\input{../src/scotland_the_brave/LaTeX/scotland_the_brave}                                                          \sclearpage
             %\input{../src/senzenina/LaTeX/senzenina}                                                                            \sclearpage
             %\input{../src/step_it_out_mary/LaTeX/step_it_out_mary}                                                              \sclearpage
             %\input{../src/tanz_mit_mir/LaTeX/tanz_mit_mir}                                                                      \sclearpage
